Fix Streamlit deployment issues
- Update .streamlit/config.toml with proper server configuration
- Pin Streamlit version to 1.48.0 for stability
- Add development mode false and proper server address settings

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -2,6 +2,12 @@
 headless = true
 enableCORS = false
 enableXsrfProtection = false
+port = 8501
+address = "0.0.0.0"
 
 [browser]
 gatherUsageStats = false
+serverAddress = "0.0.0.0"
+
+[global]
+developmentMode = false
