Updated DB .env

--- a/backend/.env
+++ b/backend/.env
@@ -4,7 +4,7 @@ STREAMLIT_URL=https://health-insurance-planner.onrender.com
 # MONGODB_URI=mongodb+srv://hackergkn:karthik@hackathon.xkjyqhh.mongodb.net/?retryWrites=true&w=majority&appName=hackathon
 
 # Health Insurance Auth Database (separate collection)
-MONGODB_URI=mongodb+srv://hackergkn:karthik@hackathon.xkjyqhh.mongodb.net/health_insurance_auth?retryWrites=true&w=majority&appName=hackathon
+MONGODB_URI=mongodb+srv://iamshaik72:javeed2005@cluster0.utktihv.mongodb.net/health_insurance_auth?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=cxxgfvcxgvfcxcgvfcdxvfcdxxgvfcdxgvcdxgv
 JWT_EXPIRES_IN=7d
 NODE_ENV=development
